# catch2-feedstock

./: .recipe_maintainers.json  .travis.yml  README.md  conda-forge.yml
.azure-pipelines/: azure-pipelines-linux.yml  azure-pipelines-osx.yml  azure-pipelines-win.yml
.ci_support/: linux_aarch64_.yaml  linux_ppc64le_.yaml  win_.yaml  win_64_.yaml
.github/: CODEOWNERS
.scripts/: build_steps.sh  run_docker_build.sh  run_osx_build.sh
recipe/: .meta.yaml.swp  bld.bat  build.sh  meta.yaml  recipe.yaml  run_test.bat  run_test.sh
recipe/patches/: 0001-Fixing-typo.patch  0001-Make-the-build-reproducible-with-g-8-and-clang-10.patch  0001-Making-target-detection-on-Mac-more-robust.patch  0002-Fixing-typo.patch  0002-Making-target-detection-on-Mac-more-robust.patch
recipe/test/: CMakeLists.txt  test_catch2.cpp
